--- a/BaseImages/nginx-php/main/src/resources/supervisor/conf.d/nginx.conf
+++ b/BaseImages/nginx-php/main/src/resources/supervisor/conf.d/nginx.conf
@@ -1,6 +1,10 @@
 [program:nginx]
-command=/usr/sbin/nginx
+command=/usr/sbin/nginx -g "daemon off;"
 numprocs=1
 autostart=true
 autorestart=true
 user=sindria
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
