--- a/BaseImages/nginx-php/local/src/resources/supervisor/conf.d/sshd.conf
+++ b/BaseImages/nginx-php/local/src/resources/supervisor/conf.d/sshd.conf
@@ -4,3 +4,7 @@ numprocs=1
 autostart=true
 autorestart=true
 user=sindria
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
