--- a/IaC/xpipe-dev/xpipe-ecommerce/deployment.yaml
+++ b/IaC/xpipe-dev/xpipe-ecommerce/deployment.yaml
@@ -112,7 +112,7 @@ spec:
         - containerPort: 80
           protocol: TCP
         - containerPort: 2222
-          hostPort: 2222
+          #hostPort: 2222
           protocol: TCP
         #readinessProbe:
         #  failureThreshold: 3
