--- a/IaC/sindria-mc/mc-proxy/service.yaml
+++ b/IaC/sindria-mc/mc-proxy/service.yaml
@@ -3,12 +3,12 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: mc-demo
-  name: mc-demo
+    app: mc-proxy
+  name: mc-proxy
   namespace: sindria-mc
 spec:
   ports:
-  - name: minecraft
+  - name: mc
     port: 25565
     protocol: TCP
     targetPort: 25565
@@ -17,6 +17,6 @@ spec:
     protocol: TCP
     targetPort: 8080
   selector:
-    app: mc-demo
+    app: mc-proxy
   sessionAffinity: None
   type: ClusterIP
