--- a/IaC/sindria-mc/mc-nerdschool/configmap.yaml
+++ b/IaC/sindria-mc/mc-nerdschool/configmap.yaml
@@ -39,7 +39,7 @@ data:
     max-world-size=29999984
     motd=Nerd School MC
     network-compression-threshold=256
-    online-mode=true
+    online-mode=false
     op-permission-level=4
     player-idle-timeout=0
     prevent-proxy-connections=false
