--- a/Core/xpipe-lab/.env
+++ b/Core/xpipe-lab/.env
@@ -3,11 +3,11 @@ HOST_USER_UID=1000
 
 # System Configuration
 #BASE_PATH=/home/ubuntu/xdev/storage/Projects
-BASE_PATH=/Users/lucapitzoi/Projects
+BASE_PATH=/Users/lucapitzoi
 
 # APP Configuration
-APP_NAME=xpipe-xdev-lab
-APP_DOMAIN=xpipe-xdev-lab.local
+APP_NAME=xpipe-lab
+APP_DOMAIN=xpipe-lab.local
 APP_CODE_PATH=/var/www/app
 APP_LOGS_PATH=./storage/logs
 APP_DATA_PATH=./storage/data
@@ -24,5 +24,5 @@ APP_IP_ADDRESS=172.16.10.254
 KIND_TAG=1.0.0
 
 # Local
-PROJECT_PATH=Sindria/XPipe/Core/xpipe-xdev-lab
+PROJECT_PATH=XPipe/Core/xpipe-lab
 CODE_PATH=src
