--- a/Core/xpipe-lab/src/config/cluster-config.yaml
+++ b/Core/xpipe-lab/src/config/cluster-config.yaml
@@ -1,6 +1,6 @@
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
-name: xpipe-xdev-lab
+name: xpipe-lab
 networking:
   # the default CNI will not be installed
   #disableDefaultCNI: true
@@ -17,7 +17,7 @@ networking:
 nodes:
 - role: control-plane
   extraMounts:
-  - hostPath: /Users/lucapitzoi/Projects/Sindria/XPipe/Core/xpipe-xdev-lab/src/resources
+  - hostPath: /Users/lucapitzoi/XPipe/Core/xpipe-lab/src/resources
     containerPath: /resources
   # port forward 80 on the host to 80 on this node
   #extraPortMappings:
@@ -35,12 +35,16 @@ nodes:
   #- hostPath: /path/to/my/files
   #  containerPath: /files
   extraMounts:
-  - hostPath: /Users/lucapitzoi/Projects/Sindria/XPipe/Core/xpipe-xdev-lab/data
+  - hostPath: /Users/lucapitzoi/XPipe/Core/xpipe-lab/data
     containerPath: /data
   # port forward 80 on the host to 80 on this node
-  #extraPortMappings:
-  #- containerPort: 80
-  #  hostPort: 80
+  extraPortMappings:
+  - containerPort: 80
+    hostPort: 80
+    protocol: TCP
+  - containerPort: 443
+    hostPort: 443
+    protocol: TCP
   # optional: set the bind address on the host
   # 0.0.0.0 is the current default
   #listenAddress: "127.0.0.1"
