--- a/Lib/nanoREST/src/pom.xml
+++ b/Lib/nanoREST/src/pom.xml
@@ -2,14 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.sindria</groupId>
+    <groupId>org.sindria.xpipe.lib</groupId>
     <artifactId>nanoREST</artifactId>
+    <version>1.0.0</version>
+    <name>nanoREST</name>
+    <description>nanoREST is a tiny MVC REST framework for micro-services</description>
     <packaging>jar</packaging>
-    <version>0.2.0</version>
 
     <properties>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
+        <java.version>17</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -56,7 +61,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.sindria.nanoREST.App</mainClass>
+                                    <mainClass>org.sindria.xpipe.lib.nanoREST.App</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
