--- a/Lib/nanoREST/src/Dockerfile
+++ b/Lib/nanoREST/src/Dockerfile
@@ -1,4 +1,22 @@
-FROM sindriainc/openjdk:1.1.0-14
+# Build Stage
+FROM sindriainc/openjdk:2.0.0-17 as builder
+
+# Add source code
+COPY ./ /var/www/app
+
+WORKDIR /var/www/app
+
+# Build dependecies
+RUN mvn compile
+
+# Build Artifact
+RUN mvn package
+
+# Push Artifact
+# TODO: push jar artifact
+
+# Production Stage
+FROM sindriainc/openjdk:2.1.0-17
 
 WORKDIR /var/www/app
 
@@ -16,13 +34,16 @@ ENV DEBIAN_FRONTEND="noninteractive"
 ENV TZ=${TIMEZONE}
 ENV SINDRIA_USER="sindria"
 ENV SINDRIA_USER_HOME="/home/sindria"
+ENV JAVA_OPTS=""
 
 # Install application
-COPY ./target/nanoREST-0.1.0.jar /var/www/app
+COPY --from=builder /var/www/app/target/nanoREST-${TAG_VERSION}.jar /var/www/app/app.jar
 
 # Setting Timezone and Fixing permission
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone && \
     chmod -R 770 /var/www/app && \
     chown -R ${SINDRIA_USER}:${SINDRIA_USER} /var/www/app
 
-CMD ["java", "-jar", "nanoREST-0.1.0.jar"]
+ENTRYPOINT exec java $JAVA_OPTS -jar app.jar
+
+USER ${SINDRIA_USER}
