--- a/Lib/blog/src/pom.xml
+++ b/Lib/blog/src/pom.xml
@@ -2,21 +2,26 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.sindria</groupId>
-    <artifactId>tca-scoreboards</artifactId>
-    <packaging>jar</packaging>
+    <groupId>org.sindria.xpipe.lib</groupId>
+    <artifactId>blog</artifactId>
     <version>0.1.0</version>
+    <name>blog</name>
+    <description>Blog example developed with nanoREST framework</description>
+    <packaging>jar</packaging>
 
     <properties>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
+        <java.version>17</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.sindria</groupId>
+            <groupId>org.sindria.xpipe.lib</groupId>
             <artifactId>nanoREST</artifactId>
-            <version>0.2.0</version>
+            <version>1.0.0</version>
         </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.sindria</groupId>-->
@@ -48,7 +53,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>it.tennisclubarzachena.scoreboards.App</mainClass>
+                                    <mainClass>org.sindria.xpipe.lib.blog.App</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
