--- a/Lib/blog/.env.local
+++ b/Lib/blog/.env.local
@@ -1,9 +1,13 @@
-# UID dell'utente che lancia il docker-compose
+# UID
 HOST_USER_UID=1000
 
+# System Configuration
+#BASE_PATH=/home/ubuntu/xdev/storage/Projects
+BASE_PATH=/Users/lucapitzoi
+
 # APP Configuration
-APP_NAME=tca-scoreboards
-APP_DOMAIN=tca-scoreboards.local
+APP_NAME=blog
+APP_DOMAIN=blog.local
 APP_CODE_PATH=/var/www/app
 APP_LOGS_PATH=./storage/logs
 APP_DATA_PATH=./storage/data
@@ -13,23 +17,33 @@ APP_CONFIG_PATH=./config
 TIMEZONE=Europe/Rome
 
 # Network Configuration
-NETWORK_SUBNET=10.10.1.0/24
-APP_IP_ADDRESS=10.10.1.16
-DB_IP_ADDRESS=10.10.1.17
+NETWORK_SUBNET=172.16.10.0/24
+APP_IP_ADDRESS=172.16.10.252
+APP_DB_IP_ADDRESS=172.16.10.253
 
 # Database Configuration
-DB_DATABASE=app
-DB_ROOT_PASSWORD=secret
-DB_USERNAME=
-DB_PASSWORD=
+APP_DB_DATABASE=app
+APP_DB_SCHEMA=
+APP_DB_ROOT_PASSWORD=secret
+APP_DB_USERNAME=user
+APP_DB_PASSWORD=secret
 
-# MySQL
-MYSQL_TAG=2.1.0
-MYSQL_VERSION=8
+# Github
+GITHUB_USERNAME=
+GITHUB_TOKEN=
+GITHUB_MAVEN_REPOSITORY=maven.pkg.github.com/SindriaInc/maven-repository
+
+# SonarQube
+SONAR_URL=
+SONAR_TOKEN=
 
 # OpenJDK
-OPENJDK_TAG=1.2.1
-OPENJDK_VERSION=14
+OPENJDK_TAG=2.1.0
+OPENJDK_VERSION=17
 
-# Local
-CODE_PATH=./src
+# MySQL
+MYSQL_TAG=8
+
+# Dev
+PROJECT_PATH=XPipe/Lib/blog
+CODE_PATH=src
