--- a/IaC/xpipe-sindria/xpipe-repos/db.yaml
+++ b/IaC/xpipe-sindria/xpipe-repos/db.yaml
@@ -32,7 +32,7 @@ spec:
   storageClassName: longhorn
   resources:
     requests:
-      storage: 1Gi
+      storage: 16Gi
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -105,8 +105,9 @@ spec:
             secretKeyRef:
               key: MYSQL_PASSWORD
               name: xpipe-repos-db-secret
-        #image: mysql:8.0.37
+        ##image: mysql:8.0.37
         image: mysql:8.3.0
+        #image: sindriainc/deployer:latest
         imagePullPolicy: IfNotPresent
         #command: [ "tail" ]
         #args: [ "-f", "/dev/null" ]
