--- a/Lib/nanoREST/src/pom.xml
+++ b/Lib/nanoREST/src/pom.xml
@@ -35,6 +35,11 @@
             <version>${org.nanohttpd.nanohttpd-nanolets.version}</version>
         </dependency>
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+        <dependency>
             <groupId>com.cronutils</groupId>
             <artifactId>cron-utils</artifactId>
             <version>${com.cronutils.cron-utils.version}</version>
