--- a/Lib/nanoREST/src/src/main/resources/application.yaml
+++ b/Lib/nanoREST/src/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ nanorest:
     logger: ${XPIPE_LIB_NANOREST_APPLICATION_LOGGER:debug}
   datasource:
     driverClassName: ${XPIPE_LIB_NANOREST_DB_DRIVER_CLASS_NAME:com.mysql.cj.jdbc.Driver}
-    url: ${XPIPE_LIB_NANOREST_DB_CONNECTION_URL:jdbc:mysql://172.16.10.206:3306/app?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false}
+    url: ${XPIPE_LIB_NANOREST_DB_CONNECTION_URL:jdbc:mysql://172.16.10.206:3306/app?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false&allowPublicKeyRetrieval=true&connectTimeout=5000}
     username: ${XPIPE_LIB_NANOREST_DB_USERNAME:root}
     password: ${XPIPE_LIB_NANOREST_DB_PASSWORD:secret}
     host: ${XPIPE_LIB_NANOREST_DB_HOST:172.16.10.206}
