--- a/Services/xpipe-pipelines-logs-bitbucket/src/src/main/resources/application.yaml
+++ b/Services/xpipe-pipelines-logs-bitbucket/src/src/main/resources/application.yaml
@@ -16,6 +16,11 @@ nanorest:
     schema: ${XPIPE_LIB_NANOREST_DB_SCHEMA:app}
   nanohttpd:
     port: ${XPIPE_LIB_NANOREST_NANOHTTPD_PORT:8080}
+
+app:
+  bitbucket:
+    username: ${XPIPE_SERVICES_BITBUCKET_USERNAME:user}
+    token: ${XPIPE_SERVICES_BITBUCKET_TOKEN:secret}
 #  orm:
 #    # ORM ddl auto (create, create-drop, validate, update)
 #    ddlAuto: update
