--- a/Services/xpipe-pipelines-logs-bitbucket/src/src/main/resources/application.yaml
+++ b/Services/xpipe-pipelines-logs-bitbucket/src/src/main/resources/application.yaml
@@ -16,12 +16,24 @@ nanorest:
     schema: ${XPIPE_LIB_NANOREST_DB_SCHEMA:app}
   nanohttpd:
     port: ${XPIPE_LIB_NANOREST_NANOHTTPD_PORT:8080}
-
-#app:
-#  bitbucket:
-#    username: ${XPIPE_SERVICES_BITBUCKET_USERNAME:user}
-#    token: ${XPIPE_SERVICES_BITBUCKET_TOKEN:secret}
 #  orm:
 #    # ORM ddl auto (create, create-drop, validate, update)
 #    ddlAuto: update
 #    showSql: false
+
+app:
+  bitbucket:
+    username: ${XPIPE_LIB_NANOREST_BITBUCKET_USERNAME:user}
+    token: ${XPIPE_LIB_NANOREST_BITBUCKET_TOKEN:secret}
+  github:
+    username: ${XPIPE_LIB_NANOREST_GITHUB_USERNAME:user}
+    token: ${XPIPE_LIB_NANOREST_GITHUB_TOKEN:secret}
+  gitea:
+    username: ${XPIPE_LIB_NANOREST_GITEA_USERNAME:user}
+    token: ${XPIPE_LIB_NANOREST_GITEA_TOKEN:secret}
+  jenkins:
+    username: ${XPIPE_LIB_NANOREST_JENKINS_USERNAME:user}
+    token: ${XPIPE_LIB_NANOREST_JENKINS_TOKEN:secret}
+  cmdbuild:
+    username: ${XPIPE_LIB_NANOREST_CMDBUILD_USERNAME:user}
+    token: ${XPIPE_LIB_NANOREST_CMDBUILD_TOKEN:secret}
