Services: added dynamic base64 secret and get secret from singleton config

--- a/Services/xpipe-pipelines-logs-bitbucket/.env.local
+++ b/Services/xpipe-pipelines-logs-bitbucket/.env.local
@@ -47,3 +47,7 @@ MYSQL_TAG=8.0.37
 # Dev
 PROJECT_PATH=XPipe/Services/xpipe-pipelines-logs-bitbucket
 CODE_PATH=src
+
+# Bitbucket
+BITBUCKET_USERNAME=
+BITBUCKET_TOKEN=
