--- a/Services/xpipe-pipelines-logs-bitbucket/docker-compose.local.yml
+++ b/Services/xpipe-pipelines-logs-bitbucket/docker-compose.local.yml
@@ -30,6 +30,9 @@ services:
       # SonarQube
       #- SONAR_URL=${SONAR_URL}
       #- SONAR_TOKEN=${SONAR_TOKEN}
+      # Bitbucket
+      - BITBUCKET_USERNAME=${BITBUCKET_USERNAME}
+      - BITBUCKET_TOKEN=${BITBUCKET_TOKEN}
     volumes:
       - "${BASE_PATH}/${PROJECT_PATH}/${CODE_PATH}:${APP_CODE_PATH}"
     hostname: "${APP_NAME}.local"
