--- a/Services/xpipe-pipelines-logs-bitbucket/.env.local
+++ b/Services/xpipe-pipelines-logs-bitbucket/.env.local
@@ -18,8 +18,8 @@ TIMEZONE=Europe/Rome
 
 # Network Configuration
 NETWORK_SUBNET=172.16.10.0/24
-APP_IP_ADDRESS=172.16.10.252
-APP_DB_IP_ADDRESS=172.16.10.253
+APP_IP_ADDRESS=172.16.10.160
+APP_DB_IP_ADDRESS=172.16.10.161
 
 # Database Configuration
 APP_DB_DATABASE=app
@@ -49,5 +49,5 @@ PROJECT_PATH=XPipe/Services/xpipe-pipelines-logs-bitbucket
 CODE_PATH=src
 
 # Bitbucket
-BITBUCKET_USERNAME=
-BITBUCKET_TOKEN=
+XPIPE_LIB_NANOREST_BITBUCKET_USERNAME=
+XPIPE_LIB_NANOREST_BITBUCKET_TOKEN=
