--- a/Lib/nanoREST/src/pom.xml
+++ b/Lib/nanoREST/src/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.sindria.xpipe.lib</groupId>
     <artifactId>nanoREST</artifactId>
-    <version>2.0.0</version>
+    <version>2.1.0</version>
     <name>nanoREST</name>
     <description>nanoREST is a tiny MVC REST framework for micro-services</description>
     <packaging>jar</packaging>
@@ -58,6 +58,11 @@
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
             <version>${org.snakeyaml.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline</artifactId>
+            <version>3.21.0</version>
         </dependency>
     </dependencies>
 
