--- a/CMDB/cmdbuild-demo/docker-compose.yml
+++ b/CMDB/cmdbuild-demo/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     #  - "${BASE_PATH}/${PROJECT_PATH}/${CODE_PATH}:${APP_CODE_PATH}"
     hostname: "${APP_NAME}.local"
     ports:
-      - "8080:8080"
+      - "8090:8080"
     networks:
       default:
         ipv4_address: "${APP_IP_ADDRESS}"
@@ -56,7 +56,7 @@ services:
 # =networks
 networks:
   default:
-    name: "vpc_${APP_NAME}"
+    name: "vpc_xpipe"
     driver: bridge
     ipam:
       config:
