--- a/BaseImages/tomcat/src/Dockerfile
+++ b/BaseImages/tomcat/src/Dockerfile
@@ -37,7 +37,7 @@ COPY resources/tomcat/postgresql-42.6.0.jar ${CATALINA_HOME}/lib/postgresql-42.6
 
 # Setup tomcat for proxy - ingress
 COPY resources/tomcat/server.xml ${CATALINA_HOME}/conf/server.xml
-RUN sed -i -E "s|@@FQDN@@|${TOMCAT_PROXY_FQDN}|g" ${CATALINA_HOME}/conf/server.xml
+#RUN sed -i -E "s|@@FQDN@@|${TOMCAT_PROXY_FQDN}|g" ${CATALINA_HOME}/conf/server.xml
 
 # Setting timezone and permissions
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone && \
