--- a/Core/xpipe-gateway-v1/src/pom.xml
+++ b/Core/xpipe-gateway-v1/src/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
-    <artifactId>proxy-server</artifactId>
+    <groupId>org.sindria.xpipe.core</groupId>
+    <artifactId>gateway</artifactId>
     <version>1.0.0</version>
 
     <properties>
@@ -72,7 +72,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.example.proxy.ProxyServer</mainClass>
+                                    <mainClass>org.sindria.xpipe.core.gateway.ProxyServer</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
