--- a/Core/xpipe-gateway-v1/src/pom.xml
+++ b/Core/xpipe-gateway-v1/src/pom.xml
@@ -10,6 +10,7 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <org.json.json.version>20210307</org.json.json.version>
     </properties>
 
     <dependencies>
@@ -18,6 +19,12 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.15.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>${org.json.json.version}</version>
         </dependency>
 
         <!-- SLF4J for Logging -->
