--- a/Core/xpipe-ecommerce/src/.gitignore
+++ b/Core/xpipe-ecommerce/src/.gitignore
@@ -97,6 +97,7 @@ atlassian*
 !/app/code/Sindria/Sindria_Cart
 !/app/code/Sindria/Sindria_Auth
 !/app/code/Sindria/Sindria_Chat
+!/app/code/Sindria/Sindria_News
 
 /app/design/adminhtml/*
 !/app/design/adminhtml/.gitkeep
