--- a/Core/xpipe-ecommerce/src/composer.json
+++ b/Core/xpipe-ecommerce/src/composer.json
@@ -23,17 +23,18 @@
         "magento/composer-dependency-version-audit-plugin": "~0.1",
         "magento/composer-root-update-plugin": "~1.1",
         "magento/product-community-edition": "2.4.3-p1",
-        "sindria/module-auth": "@dev",
-        "sindria/module-backend": "@dev",
-        "sindria/module-cart": "@dev",
-        "sindria/module-catalog-search": "@dev",
-        "sindria/module-cms": "@dev",
-        "sindria/module-contact": "@dev",
-        "sindria/module-landing-page": "@dev",
-        "sindria/module-marketplace": "@dev",
-        "sindria/module-newsletter": "@dev",
-        "sindria/module-sales": "@dev",
-        "sindria/module-search": "@dev"
+        "sindria/module-auth": "1.0.0",
+        "sindria/module-backend": "1.0.0",
+        "sindria/module-cart": "1.0.0",
+        "sindria/module-catalog-search": "1.0.0",
+        "sindria/module-cms": "1.0.0",
+        "sindria/module-contact": "1.0.0",
+        "sindria/module-landing-page": "1.0.0",
+        "sindria/module-marketplace": "1.0.0",
+        "sindria/module-newsletter": "1.0.0",
+        "sindria/module-sales": "1.0.0",
+        "sindria/module-search": "1.0.0",
+        "sindria/theme-frontend-xpipe": "1.0.0"
     },
     "autoload": {
         "exclude-from-classmap": [
@@ -95,6 +96,10 @@
         {
             "type": "path",
             "url": "app/code/Sindria/*"
+        },
+        {
+            "type": "path",
+            "url": "app/design/frontend/Sindria/*"
         }
     ],
     "extra": {
