add news module

--- a/Core/xpipe-ecommerce/src/composer.json
+++ b/Core/xpipe-ecommerce/src/composer.json
@@ -31,6 +31,7 @@
         "sindria/module-contact": "1.0.0",
         "sindria/module-landing-page": "1.0.0",
         "sindria/module-marketplace": "1.0.0",
+        "sindria/module-news": "1.0.0",
         "sindria/module-newsletter": "1.0.0",
         "sindria/module-sales": "1.0.0",
         "sindria/module-search": "1.0.0",
