--- a/BaseImages/qemu/src/Dockerfile
+++ b/BaseImages/qemu/src/Dockerfile
@@ -1,7 +1,6 @@
 ARG ARCH
 ARG TAG_SUFFIX
-#FROM --platform=linux/${ARCH} qemux/qemu-docker:${TAG_SUFFIX}
-FROM qemux/qemu-docker:latest
+FROM --platform=linux/${ARCH} qemux/qemu-docker:${TAG_SUFFIX}
 
 ARG TAG_SUFFIX
 ARG TAG_VERSION
