--- a/Core/xpipe-ecommerce/src/composer.json
+++ b/Core/xpipe-ecommerce/src/composer.json
@@ -33,6 +33,7 @@
         "sindria/module-marketplace": "1.0.0",
         "sindria/module-news": "1.0.0",
         "sindria/module-newsletter": "1.0.0",
+        "sindria/module-profile": "^1.0",
         "sindria/module-sales": "1.0.0",
         "sindria/module-search": "1.0.0",
         "sindria/theme-frontend-xpipe": "1.0.0"
