--- a/Core/xpipe-ecommerce/src/.gitignore
+++ b/Core/xpipe-ecommerce/src/.gitignore
@@ -17,6 +17,7 @@ atlassian*
 /app/config_sandbox
 /app/etc/config.php
 /app/etc/env.php
+/app/etc/env-secret.php
 /app/code/Magento/TestModule*
 /lib/internal/flex/uploader/.actionScriptProperties
 /lib/internal/flex/uploader/.flexProperties
